--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://gitlab.com/Distributed-Compute-Protocol/dcp-slice-service#readme",
   "dependencies": {
     "access-log": "^0.4.1",
-    "kvin": "^1.2.5"
+    "kvin": "^1.2.5",
+    "multipart-formdata": "^1.1.0",
+    "nanoid": "^3.1.29"
   }
 }
