--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dcp-rds",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "DCP Remote Data Service reference implementation",
-  "main": "bin/dcp-rds-httpd",
   "scripts": {
+    "postinstall": "npx ./npm/postinstall.js",
     "postpublish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
   },
   "repository": {
@@ -22,20 +22,19 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "bin": {
+    "dcp-rds-httpd": "./bin/dcp-rds-httpd"
+  },
   "files": [
     "*.md",
     "*.js",
-    "bin",
-    "lib",
     "etc",
+    "lib",
     "libexec",
-    "browser-test"
+    "browser-test",
+    "systemctl",
+    "npm"
   ],
-  "directories": {
-    "example": "examples",
-    "lib": "lib",
-    "test": "test"
-  },
   "dependencies": {
     "access-log": "^0.4.1",
     "kvin": "^1.2.5",
